# gtk_sample

./: Makefile  Makefile.in  config.status  configure  configure.ac  hello_world.c
.deps/: hello_world.Po
autom4te.cache/: output.0  requests  traces.0
