AC_INIT([amhello], [1.0], [bug-automake@gnu.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CPP
AC_PROG_CC

PKG_CHECK_MODULES(GLIB, glib-2.0)
PKG_CHECK_MODULES(GTK30, gtk+-3.0)

CFLAGS="$CFLAGS -O0 $GTK30_CFLAGS $GLIB_CFLAGS -g -Wall -Werror"
#LDFLAGS="$LDFLAGS $GLIB_LIBS $GTK30_LIBS"
LIBS="$GLIB_LIBS $GTK30_LIBS"

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
